# script-to-video-prompts

./: .gitignore  README.md  generate_prompts.py  pyproject.toml  smoke_test_yandex.py
src/: docx_reader.py  normalize.py  openai_client.py  output.py  parser.py  retry.py  yandex_docx.py
tests/: test_append_header_consistency.py  test_cli_debug_flags.py  test_cli_help.py  test_docx_input.py  test_docx_numbering_extraction.py  test_dotenv_load.py  test_empty_selection_exit_code.py  test_env_defaults.py  test_fail_fast.py  test_include_meta.py  test_normalize.py  test_openai_client.py  test_openai_client_integration.py  test_output.py  test_parser.py  test_selection.py  test_yandex_input.py
