[project]
name = "script-to-video-prompts"
version = "0.1.0"
description = "Numbered script -> cinematic prompts -> CSV"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]


